--- a/FoodDeliveryrestart/Components/Pages/MenuItemPages/Index.razor
+++ b/FoodDeliveryrestart/Components/Pages/MenuItemPages/Index.razor
@@ -1,4 +1,5 @@
-﻿@page "/menuitems"
+﻿@page "/grouporders/restaurants/{RestaurantId:int}/menuitems"
+
 @using Microsoft.EntityFrameworkCore
 @using Microsoft.AspNetCore.Components.QuickGrid
 @using FoodDeliveryrestart.Domain
