--- a/FoodDeliveryrestart/Components/Pages/MallPages/Index.razor
+++ b/FoodDeliveryrestart/Components/Pages/MallPages/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/malls"
+﻿@page "/grouporders/malls"
 @using Microsoft.EntityFrameworkCore
 @using Microsoft.AspNetCore.Components.QuickGrid
 @using FoodDeliveryrestart.Domain
