--- a/FoodDeliveryrestart/Components/Pages/RestaurantPages/Index.razor
+++ b/FoodDeliveryrestart/Components/Pages/RestaurantPages/Index.razor
@@ -1,4 +1,5 @@
-﻿@page "/restaurants"
+﻿@page "/grouporders/malls/{MallId:int}/restaurants"
+
 @using Microsoft.EntityFrameworkCore
 @using Microsoft.AspNetCore.Components.QuickGrid
 @using FoodDeliveryrestart.Domain
