--- a/FoodDeliveryrestart/Components/Pages/MenuItemPages/Index.razor
+++ b/FoodDeliveryrestart/Components/Pages/MenuItemPages/Index.razor
@@ -19,7 +19,11 @@
     <PropertyColumn Property="menuitem => menuitem.ItemName" />
     <PropertyColumn Property="menuitem => menuitem.Price" />
     <PropertyColumn Property="menuitem => menuitem.Description" />
-    <PropertyColumn Property="menuitem => menuitem.NutritionInfo" />
+    <PropertyColumn Property="menuitem => menuitem.Calories" Title="Calories (kcal)" />
+    <PropertyColumn Property="menuitem => menuitem.CarbohydratesG" Title="Carbs (g)" />
+    <PropertyColumn Property="menuitem => menuitem.ProteinG" Title="Protein (g)" />
+    <PropertyColumn Property="menuitem => menuitem.FatG" Title="Fat (g)" />
+    <PropertyColumn Property="menuitem => menuitem.Allergens" Title="Allergens" />
     <PropertyColumn Property="menuitem => menuitem.RestaurantId" />
     <PropertyColumn Property="menuitem => menuitem.DateCreated" />
     <PropertyColumn Property="menuitem => menuitem.DateUpdated" />
