--- a/FoodDeliveryrestart/Components/Pages/MenuItemPages/Delete.razor
+++ b/FoodDeliveryrestart/Components/Pages/MenuItemPages/Delete.razor
@@ -1,14 +1,13 @@
-﻿@page "/menuitems/delete"
+﻿@page "/menuitems/details"
 @using Microsoft.EntityFrameworkCore
 @using FoodDeliveryrestart.Domain
 @inject IDbContextFactory<FoodDeliveryrestart.Data.FoodDeliveryrestartContext> DbFactory
 @inject NavigationManager NavigationManager
 
-<PageTitle>Delete</PageTitle>
+<PageTitle>Details</PageTitle>
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
-<p>Are you sure you want to delete this?</p>
 <div>
     <h2>MenuItem</h2>
     <hr />
@@ -20,43 +19,37 @@
         <dl class="row">
             <dt class="col-sm-2">ItemName</dt>
             <dd class="col-sm-10">@menuitem.ItemName</dd>
-        </dl>
-        <dl class="row">
             <dt class="col-sm-2">Price</dt>
             <dd class="col-sm-10">@menuitem.Price</dd>
-        </dl>
-        <dl class="row">
             <dt class="col-sm-2">Description</dt>
             <dd class="col-sm-10">@menuitem.Description</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">NutritionInfo</dt>
-            <dd class="col-sm-10">@menuitem.NutritionInfo</dd>
-        </dl>
-        <dl class="row">
+
+            <dt class="col-sm-2">Calories</dt>
+            <dd class="col-sm-10">@menuitem.Calories kcal</dd>
+            <dt class="col-sm-2">Carbohydrates (g)</dt>
+            <dd class="col-sm-10">@menuitem.CarbohydratesG g</dd>
+            <dt class="col-sm-2">Protein (g)</dt>
+            <dd class="col-sm-10">@menuitem.ProteinG g</dd>
+            <dt class="col-sm-2">Fat (g)</dt>
+            <dd class="col-sm-10">@menuitem.FatG g</dd>
+            <dt class="col-sm-2">Allergens</dt>
+            <dd class="col-sm-10">@menuitem.Allergens</dd>
+
             <dt class="col-sm-2">RestaurantId</dt>
             <dd class="col-sm-10">@menuitem.RestaurantId</dd>
-        </dl>
-        <dl class="row">
             <dt class="col-sm-2">DateCreated</dt>
             <dd class="col-sm-10">@menuitem.DateCreated</dd>
-        </dl>
-        <dl class="row">
             <dt class="col-sm-2">DateUpdated</dt>
             <dd class="col-sm-10">@menuitem.DateUpdated</dd>
-        </dl>
-        <dl class="row">
             <dt class="col-sm-2">CreatedBy</dt>
             <dd class="col-sm-10">@menuitem.CreatedBy</dd>
-        </dl>
-        <dl class="row">
             <dt class="col-sm-2">UpdatedBy</dt>
             <dd class="col-sm-10">@menuitem.UpdatedBy</dd>
         </dl>
-        <EditForm method="post" Model="menuitem" OnValidSubmit="DeleteMenuItem" FormName="delete" Enhance>
-            <button type="submit" class="btn btn-danger" disabled="@(menuitem is null)">Delete</button> |
-            <a href="/menuitems">Back to List</a>
-        </EditForm>
+        <div>
+            <a href="@($"/menuitems/edit?id={menuitem.Id}")">Edit</a> |
+            <a href="@($"/menuitems")">Back to List</a>
+        </div>
     }
 </div>
 
@@ -75,13 +68,5 @@
         {
             NavigationManager.NavigateTo("notfound");
         }
-    }
-
-    private async Task DeleteMenuItem()
-    {
-        using var context = DbFactory.CreateDbContext();
-        context.MenuItem.Remove(menuitem!);
-        await context.SaveChangesAsync();
-        NavigationManager.NavigateTo("/menuitems");
     }
 }
