--- a/FoodDeliveryrestart/Components/Pages/MenuItemPages/Details.razor
+++ b/FoodDeliveryrestart/Components/Pages/MenuItemPages/Details.razor
@@ -23,8 +23,18 @@
             <dd class="col-sm-10">@menuitem.Price</dd>
             <dt class="col-sm-2">Description</dt>
             <dd class="col-sm-10">@menuitem.Description</dd>
-            <dt class="col-sm-2">NutritionInfo</dt>
-            <dd class="col-sm-10">@menuitem.NutritionInfo</dd>
+
+            <dt class="col-sm-2">Calories</dt>
+            <dd class="col-sm-10">@menuitem.Calories kcal</dd>
+            <dt class="col-sm-2">Carbohydrates (g)</dt>
+            <dd class="col-sm-10">@menuitem.CarbohydratesG g</dd>
+            <dt class="col-sm-2">Protein (g)</dt>
+            <dd class="col-sm-10">@menuitem.ProteinG g</dd>
+            <dt class="col-sm-2">Fat (g)</dt>
+            <dd class="col-sm-10">@menuitem.FatG g</dd>
+            <dt class="col-sm-2">Allergens</dt>
+            <dd class="col-sm-10">@menuitem.Allergens</dd>
+
             <dt class="col-sm-2">RestaurantId</dt>
             <dd class="col-sm-10">@menuitem.RestaurantId</dd>
             <dt class="col-sm-2">DateCreated</dt>
